--- a/src/scss/core/_default.scss
+++ b/src/scss/core/_default.scss
@@ -69,9 +69,9 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 ::selection {
-  background: transparent;
+  // background: transparent;
   background-color: $colorSelection;
-  color: $colorLink;
+  color: $colorBase;
 }
 .fa {
   display: inline-block;
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* List items */
 ul,ol {
-  padding: 0 0 0 30px;
+  padding: 0 0 0 25px;
   & > li {
     & > ul,
     & > ol {
