--- a/src/scss/layout/_layout-common.scss
+++ b/src/scss/layout/_layout-common.scss
@@ -4,11 +4,17 @@
 /* common styles
 /* ======================================= */
 
+.site-content {
+	padding: 0 1em;
+}
 .site-main {
 	/* entry-meta */
 	.entry-meta {
 		@extend %clearfix;
+		padding: 5px;
+		border-radius: 4px;  
 		line-height: 1.2;
+		background-color: #f9f9f9;
 		.posted-on {
 			@extend %baseMeta;
 			&:before {
@@ -46,10 +52,10 @@
 	}
 	/* entry-content */
 	.entry-title {
-		@extend %link;
 		line-height: 1.4;
 		font-family: $fontFamily;
-		font-weight: bold;
+		font-size: 1.4em;
+		color: $colorSub;
 		& > a {
 			@extend %link;
 		}
@@ -63,8 +69,10 @@
 			padding: .5em;
 			line-height: 1.5;
 		}
-		h3 {
-			margin: 1.2em auto;
+		> h3 {
+			margin: 1.4em auto;
+			padding-left: .8em;
+			border-left: 2px solid $colorBase;  
 		}
 		p {
 			margin-bottom: 1.6em;
@@ -74,7 +82,7 @@
 	  max-width: 100%;
 	  margin-bottom: 1.6em;
 	  padding: 15px;
-	  overflow-x: scroll;
+	  overflow-x: auto;
 	  // border: none;
 			& > code {
 				border: none;
@@ -97,12 +105,14 @@
 			color: $colorSub;
 		}
 		blockquote {
-			padding: 0 1.5em;
+			margin-right: 0;
+			margin-left: .5em;
+			padding: 0 0 0 1.4em; 
 			border: none;
 			border-left: 2px solid lighten($colorBase, 60%);
 			background-color: #fff;
 			line-height: 1.7;
-			> p, a, ul, li, dt, dd, small, cite {
+			> p, a, ul, ol, li, dt, dd, small, cite {
 				font-style: normal;
 				color: lighten($colorBase, 30%);
 				font-size: 0.8em;
@@ -141,8 +151,6 @@
 	.post-navigation {
 		margin: 0 0 4em;
 		padding: 20px 0;
-		// border-top: 1px solid lighten($colorBase, 55%);
-		// border-bottom: 1px solid lighten($colorBase, 55%);
 	}
 	.nav-previous,
 	.nav-next {
@@ -195,14 +203,31 @@
 /* media
 /* --------------------------------------- */
 
+/* over 35em */
+@mixin layout-common-over35em {
+	.site-content {
+		padding: 0 5em;
+	}
+}
+
 /* over 68em */
 @mixin layout-common-over68em {
+	.site-content {
+		padding: 0; 
+	}
 	.site-main {
 		/* entry-meta */
 		.entry-meta {
+			padding-right: 2.8em;
 			border-right: 1px dashed lighten($colorBase, 60%);
+			background: transparent;
 		}
 		/* entry-content */
+		.entry-title {
+			font-size: 2em;
+			line-height: 1.5;
+			letter-spacing: -1px;  
+		}
 		.entry-content {
 			h2 {
 				margin: 1.8em auto 1.4em auto;
@@ -221,6 +246,8 @@
 				font-size: 1.4em;
 			}
 			blockquote {
+				margin-left: 1.2em; 
+				padding: 0 0 0 1.5em;
 				font-size: 1em;
 			}
 		}
