refactor some styles #3

--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -55,6 +55,9 @@
     display: inline-block;
     vertical-align: top;
     color: $colorBase;
+    &:hover {
+      color: lighten($colorBase, 20%);
+    }
   }
 }
 // link
