--- a/src/scss/module/_module-buttons.scss
+++ b/src/scss/module/_module-buttons.scss
@@ -16,6 +16,7 @@ input[type="submit"] {
 	border-radius: 4px;
 	color: #ffffff;
 	font-family: $fontFamily;
+	font-weight: 600;
 	&:hover {
 		background: $colorLinkHover;
 		border-bottom: 3px solid $colorLink;
